# sync-time

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/poco-wrapper/: NTPClient.cpp  NTPClient.h
src/: main.cpp
